Typo fix changelog.

--- a/changelog
+++ b/changelog
@@ -1372,7 +1372,7 @@ pandoc (2.0)
 
         [b]: url
 
-    This was previously enabled by default; now it is now forbidden by default.
+    This was previously enabled by default; it is now forbidden by default.
 
   * Add `space_in_atx_header` extension (#3512).  This is enabled by default
     in pandoc and GitHub markdown but not the other flavors.
